# medium

./: .gitignore  CHANGELOG.md  README.md
qwen3.5-vs-gemma4/: gemma4-26b-a4b-31k-context.md  gemma4-26b-a4b-4k-context.md  gemma4-26b-a4b.md  gemma4-31b-31k-context.md  gemma4-31b-4k-context.md  gemma4-31b.md  qwen35-27b-31k-context.md  qwen35-27b-4k-context.md  qwen35-27b.md  qwen35-35b-a3b-31k-context.md  qwen35-35b-a3b-4k-context.md  qwen35-35b-a3b.md
supervisor/: README.md  config-small.yaml  config.yaml  pyproject.toml  run_experiment.py
