[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unit-prompt-experiment-v7"
version = "0.1.0"
description = "Unit Prompt Experiment v7 — focused cross-model evaluation pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Laurent-Philippe Albou", email = "contact@abstractcore.ai" },
]
dependencies = [
  "abstractcore",
  "pyyaml",
]

[project.urls]
Homepage = "https://github.com/abstractcore/unit-prompt-experiment-v7"
